[package]
name = "my_cex"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
anyhow = "1.0"
instant = "0.1"